@@ -1,6 +1,6 @@
 ---
- browser/components/shell/src/nsGNOMEShellService.cpp |   16 ++++++++++++++--
- 1 file changed, 14 insertions(+), 2 deletions(-)
+ browser/components/shell/src/nsGNOMEShellService.cpp |   34 +++++++++++++++++--
+ 1 file changed, 32 insertions(+), 2 deletions(-)
 
 Index: mozilla/browser/components/shell/src/nsGNOMEShellService.cpp
 ===================================================================
@@ -25,7 +25,33 @@ Index: mozilla/browser/components/shell/src/nsGNOMEShellService.cpp
  
  struct MimeTypeAssociation
  {
-@@ -135,17 +137,16 @@
+@@ -127,25 +129,42 @@
+   nsCOMPtr<nsILocalFile> appPath;
+   rv = dirSvc->Get(NS_XPCOM_CURRENT_PROCESS_DIR, NS_GET_IID(nsILocalFile),
+                    getter_AddRefs(appPath));
+   NS_ENSURE_SUCCESS(rv, rv);
+ 
+   rv = appPath->AppendNative(NS_LITERAL_CSTRING(MOZ_APP_NAME));
+   NS_ENSURE_SUCCESS(rv, rv);
+ 
++  nsCOMPtr<nsIStringBundleService> bundleService =
++    do_GetService(NS_STRINGBUNDLE_CONTRACTID);
++  NS_ENSURE_TRUE(bundleService, NS_ERROR_OUT_OF_MEMORY);
++
++  nsCOMPtr<nsIStringBundle> brandBundle;
++  bundleService->CreateBundle(BRAND_PROPERTIES, getter_AddRefs(brandBundle));
++  NS_ENSURE_TRUE(brandBundle, NS_ERROR_FAILURE);
++
++  nsString brandShortName;
++  rv = brandBundle->GetStringFromName(NS_LITERAL_STRING("brandShortName").get(),
++                                      getter_Copies(brandShortName));
++
++  if (brandShortName.Equals(NS_LITERAL_STRING("Web Browser"))) {
++    mSystemAppPath.Assign (NS_LITERAL_CSTRING("/usr/bin/" "awesome-browser"));
++  } else {
++    mSystemAppPath.Assign (NS_LITERAL_CSTRING("/usr/bin/" MOZ_APP_NAME));
++  }
++
    return appPath->GetNativePath(mAppPath);
  }
  
@@ -43,7 +69,7 @@ Index: mozilla/browser/components/shell/src/nsGNOMEShellService.cpp
        return PR_FALSE;
      }
  
-@@ -153,19 +154,25 @@
+@@ -153,19 +172,25 @@
      g_free(nativePath);
    } else {
      commandPath = g_find_program_in_path(aKeyValue);
@@ -53,7 +79,7 @@ Index: mozilla/browser/components/shell/src/nsGNOMEShellService.cpp
      return PR_FALSE;
  
 +#ifdef SYSTEM_PATH_BUILD
-+  PRBool matches = NS_LITERAL_CSTRING("/usr/bin/" MOZ_APP_NAME).Equals(commandPath);
++  PRBool matches = mSystemAppPath.Equals(commandPath);
 +  g_free(commandPath);
 +  return matches;
 +#else
@@ -69,7 +95,7 @@ Index: mozilla/browser/components/shell/src/nsGNOMEShellService.cpp
  {
    *aIsDefaultBrowser = PR_FALSE;
    if (aStartupCheck)
-@@ -211,18 +218,23 @@
+@@ -211,18 +236,23 @@
  #ifdef DEBUG
    if (aForAllUsers)
      NS_WARNING("Setting the default browser for all users is not yet supported");
@@ -80,7 +106,7 @@ Index: mozilla/browser/components/shell/src/nsGNOMEShellService.cpp
    nsCAutoString schemeList;
 +
 +#ifdef SYSTEM_PATH_BUILD
-+  nsCAutoString appKeyValue(NS_LITERAL_CSTRING("/usr/bin/" MOZ_APP_NAME));
++  nsCAutoString appKeyValue(mSystemAppPath);
 +#else 
    nsCAutoString appKeyValue(mAppPath);
 -  appKeyValue.Append(" \"%s\"");
